src/test/resources/testData/annotation/IDEA_106515.hx
class <text_attr descr="null">Test</text_attr> {
  public static function <text_attr descr="null">main</text_attr>() {
    var <text_attr descr="null">arr</text_attr> = <error descr="Unresolved type">TArray</error>.foo();
  }
}